Z-index fixed

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -376,6 +376,7 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.06);
   transition: all 250ms linear;
+  z-index: 20;
 
   & .modal {
     position: absolute;
